# c-game-engine

./: .clang-tidy  .gitattributes  .gitignore  BuildForDistribution.sh  CMakeLists.txt  FetchPackage.cmake  README.md  config.h  defines.h  main.c
Actor/: Coin.c  Coin.h  Door.c  Door.h  Goal.c  Goal.h  Laser.c  Laser.h  LaserEmitter.c  LaserEmitter.h  Physbox.c  Physbox.h  TestActor.c  TestActor.h
AssetGenerator/: genassets.py
Assets/: game.game
Debug/: DPrint.c  DPrint.h  FrameBenchmark.c  FrameBenchmark.h  FrameGrapher.c  (+3 more)
engine/: CMakeLists.txt
engine/cmake/: Commit.h.in  FetchPackage.cmake  GenerateCommitHashes.cmake  Helpers.cmake
engine/include/engine/: Engine.h
engine/include/engine/actor/: Camera.h  Entrance.h  GlobalFog.h  GlobalLight.h  IoProxy.h  LogicBinary.h  LogicCounter.h  LogicDecimal.h  SoundPlayer.h  Sprite.h  StaticModel.h  Trigger.h  TriggerMap.h
engine/include/engine/actor/env/: TonemapController.h
engine/include/engine/actor/logic/: LogicBinary.h  LogicDecimal.h
engine/include/engine/actor/prop/: Button.h  PhysicsModel.h  Sprite.h  StaticModel.h
engine/include/engine/assets/: AssetReader.h  DataReader.h  DataWriter.h  FontLoader.h  GameConfigLoader.h  KvlFile.h  LevelLoader.h  MapLoader.h  MapMaterialLoader.h  ModelLoader.h  ShaderLoader.h  TextureLoader.h
engine/include/engine/debug/: DPrint.h  DPrintConsole.h  DebugEntryManager.h  DebugGraph.h  FrameGrapher.h
engine/include/engine/gameState/: LoadingState.h
engine/include/engine/graphics/: Drawing.h  Font.h  RenderingHelpers.h  std140.h
engine/include/engine/graphics/gl/: GLHelper.h  GLInternal.h  GLdebug.h  GLframe.h  GLinit.h  GLobjects.h  GLshaders.h  GLui.h  GLworld.h
engine/include/engine/graphics/vulkan/: Vulkan.h  VulkanActors.h  VulkanHelpers.h  VulkanInternal.h  VulkanResources.h
engine/include/engine/helpers/: Arguments.h  BackgroundMapManager.h  MathEx.h  PlatformHelpers.h  Realloc.h
engine/include/engine/physics/: MapPhysics.h  Navigation.h  Physics.h  PlayerPhysics.h
engine/include/engine/structs/: Actor.h  ActorDefinition.h  ActorWall.h  Asset.h  Camera.h  Color.h  Dict.h  GameState.h  GlobalState.h  InputAction.h  Item.h  KVList.h  Level.h  Light.h  List.h  Map.h  Options.h  Param.h  Player.h  Viewmodel.h  Wall.h
engine/include/engine/subsystem/: Discord.h  Error.h  Input.h  Logging.h  SoundSystem.h  TextInputSystem.h  Timing.h
engine/include/engine/subsystem/threads/: LodThread.h  PhysicsThread.h
engine/include/engine/uiStack/: UiStack.h
engine/include/engine/uiStack/controls/: Button.h  CheckBox.h  RadioButton.h  Slider.h  TextBox.h  VScrollBar.h
engine/src/: Engine.c
engine/src/actor/: Camera.c  Entrance.c  GlobalFog.c  GlobalLight.c  IoProxy.c  LogicBinary.c  LogicCounter.c  LogicDecimal.c  PhysicsModel.c  SoundPlayer.c  Sprite.c  StaticModel.c  TonemapController.c  Trigger.c  TriggerMap.c
engine/src/actor/env/: GlobalFog.c  GlobalLight.c  TonemapController.c
engine/src/actor/logic/: LogicBinary.c  LogicCounter.c  LogicDecimal.c
engine/src/actor/prop/: Button.c  PhysicsModel.c  Sprite.c  StaticModel.c
engine/src/assets/: AssetReader.c  DataReader.c  DataWriter.c  FontLoader.c  GameConfigLoader.c  KvlFile.c  LevelLoader.c  MapLoader.c  MapMaterialLoader.c  ModelLoader.c  ShaderLoader.c  TextureLoader.c
engine/src/debug/: DPrint.c  DPrintConsole.c  DebugEntryManager.c  DebugGraph.c  FrameBenchmark.c  FrameGrapher.c  JoltDebugRenderer.c
engine/src/gameState/: LoadingState.c
engine/src/graphics/: Drawing.c  Font.c  RenderingHelpers.c
engine/src/graphics/gl/: GLDebug.c  GLHelper.c  GLdebug.c  GLframe.c  GLinit.c  GLobjects.c  GLshaders.c  GLui.c  GLworld.c
engine/src/graphics/vulkan/: Vulkan.c  VulkanActors.c  VulkanHelpers.c  VulkanInternal.c  VulkanPipelines.c  VulkanResources.c
engine/src/helpers/: Arguments.c  BackgroundMapManager.c  MathEx.c  PlatformHelpers.c  Realloc.c
engine/src/physics/: MapPhysics.c  Navigation.c  Physics.c  PlayerPhysics.c
engine/src/structs/: Actor.c  ActorDefinition.c  ActorWall.c  GlobalState.c  InputAction.c  Item.c  KVList.c  Level.c  List.c  Map.c  Options.c  Param.c  Player.c  Wall.c
engine/src/subsystem/: CommandParser.c  Discord.c  Error.c  Input.c  Logging.c  SoundSystem.c  TextInputSystem.c  Timing.c
engine/src/subsystem/threads/: LodThread.c  PhysicsThread.c
engine/src/uiStack/: UiStack.c
engine/src/uiStack/controls/: Button.c  CheckBox.c  RadioButton.c  Slider.c  TextBox.c  VScrollBar.c
game/: CMakeLists.txt
game/cmake/: Helpers.cmake
game/include/actor/: Button.h  Coin.h  Door.h  Goal.h  Laser.h  LaserEmitter.h  Physbox.h  TestActor.h
game/include/actor/item/: ItemEraser.h
game/include/actor/npc/: NpcJohn.h  TestActor.h
game/include/actor/prop/: Door.h  Goal.h  Laser.h
game/include/gameState/: LevelSelectState.h  LoadingState.h  LogoSplashState.h  MainState.h  MenuState.h  OptionsState.h  PauseState.h
game/include/gameState/options/: ControlsOptionsState.h  DebugOptionsState.h  InputOptionsState.h  SoundOptionsState.h  VideoOptionsState.h
game/include/helpers/: GameActorRegistration.h
game/include/item/: EraserItem.h  LaserStopperItem.h
game/src/: GameMain.c  main.c
game/src/actor/: Button.c  Coin.c  Door.c  Goal.c  ItemEraser.c  Laser.c  LaserEmitter.c  NpcJohn.c  Physbox.c  TestActor.c
game/src/actor/item/: ItemEraser.c
game/src/actor/npc/: NpcJohn.c  TestActor.c
game/src/actor/prop/: Coin.c  Door.c  Goal.c  Laser.c  LaserEmitter.c  Physbox.c
game/src/gameState/: LevelSelectState.c  LoadingState.c  LogoSplashState.c  MainState.c  MenuState.c  OptionsState.c  PauseState.c
game/src/gameState/options/: ControlsOptionsState.c  DebugOptionsState.c  InputOptionsState.c  SoundOptionsState.c  VideoOptionsState.c
game/src/helpers/: GameActorRegistration.c
game/src/item/: EraserItem.c  LaserStopperItem.c
launcher/: CMakeLists.txt  LibraryLoader.c  LibraryLoader.h  game.rc  main.c
launcher/include/: AnsiCodes.h  DialogSystem.h  Filesystem.h  LibraryLoader.h  x86.h
launcher/src/: DialogSystem.c  Filesystem.c  LibraryLoader.c  main.c  x86.c
(+704 files in other folders)
